# process-per-request

./: .gitignore  baseline.js  cluster.js  go.mod  go.sum  package-lock.json  package.json
child-process/: index.js  worker.js
child-process-comm-channel/: index.js  worker.js
child-process-send-logs/: index.js  worker.js
go/: main.go
napi/: Cargo.toml  foo.mjs  index.d.ts  index.js  package-lock.json  package.json
napi/.github/workflows/: CI.yml
napi/__test__/: index.spec.mjs
napi/npm/darwin-arm64/: README.md  package.json
napi/npm/darwin-x64/: README.md  package.json
napi/npm/linux-x64-gnu/: README.md  package.json
napi/npm/win32-x64-msvc/: README.md  package.json
napi/src/: lib.rs
node-go/: index.js  main.go
nodejs/: index.js  streams.js  worker.js
process-per-process/: index.js
rust/: Cargo.toml
rust/src/: main.rs
stdio/child-process-dial/: index.js  worker.js
stdio/child-process-handle/: index.js  worker.js
stdio/child-process-send-logs/: index.js
stdio/cmd-handle/: index.js  worker.js
stdio/process-per-process/: index.js  pool.js  worker.js
worker-threads/: index.js  worker.js
